Added proper header/footer plus addt'l info

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700" rel="stylesheet">  
 </head>
 <body>
-  <h1>The Starting Five</h1>
-  <p>Prompts for the five minute journal</p>
-  <hr>
+  <header>
+    <h1>The Starting Five</h1>
+    <p>Prompts for the five minute journal</p>
+  </header>
   <p>It is <b class="time"></b> on <b class="date"></b>.</p>
   <h2>Quote of the day</h2>
   <div class="quote">
     <p>"<span class="content"></span>"</p>
-    <span>-<a href="" class="source"></a></span>
+    <span>- <a href="" class="source"></a></span>
   </div>
   <h2>Answer these questions:</h2>
   <ul>
@@ -26,14 +27,9 @@
     <li>Three amazing things that happened today...</li>
     <li>How could today have been better?</li>
   </ul>
-  <h2>About The Starting Five</h2>
-  <p>I've always been terrible at keeping a journal. At the start of 2018, I decided I wanted to commit to keeping a solid journal. I found myself feeling a bit lost at times in the year prior, and I knew I needed to become more focused than ever.</p>
-  <p>While I was researching good journaling habits, I stumbled across the Five Minute Journal. I was convinced, but I wanted to use a notebook of my choosing instead of the official one. But I needed an easy way to complete the journal entries quickly.</p>
-  <p>Enter The Starting Five. This site gives you everything you need to complete your daily journal and move on with your life. No guessing what the current day is, and no googling or downloading another app to get a random inspirational quote. Then, just work down the list of tasks and you're all done!</p>
-  <h2>How I use The Starting Five</h2>
-  <p>I use a Hardcover Leuctturm1917 Dot Grid notebook for both my five minute journal and a bullet journal task manager. I also carry Field Notes Brand pocket notebooks everywhere for creating lists, quick notes, etc. while I'm on the go.</p>
-  <p>I start my day by spending 10 minutes getting focused on the day ahead. I open up The Starting Five and enter the date below the previous day's entry. Below that, I copy the quote and spend a few extra seconds reflecting on it. After that, I spend a couple of minutes to take inventory of three things I'm grateful for and my daily affirmation. Then, I quickly reference my to-dos and take stock of my state-of-mind to determine what would make the day ahead great. During this time, I'll also check to see if I have any appointments or well-wishes to give before moving on with my day.</p>
-  <p>At the end of the day, I revisit my journal and look back on my wins of the day, as well as something that would've made the day better. Also, I flip through my Field Notes to make sure everything makes that needs to get back into my main journal gets there. This process works well for me, and if anything changes I'll be sure to update it here.</p>
+  <footer>
+    <p>The Starting Five was created by <a href="https://brykng.com">Bryan King</a>. You can learn more about it on <a href="https://github.com/brykng/startingfive">GitHub</a>.</p>
+  </footer> 
   <style>
     * {
       box-sizing: border-box;
@@ -41,13 +37,18 @@
 
     body {
       font-family: "Lora", Georgia, sans-serif;
-      font-size: 20px;
+      font-size: 16px;
       background-color: #1f1f1f;
       color: #eee;
       max-width: 768px;
       margin: 0 auto;
       padding: 1em;
       line-height: 1.5;
+    }
+    @media all and (min-width: 768px){
+      body {
+        font-size: 20px;
+      }
     }
 
     h1 {
@@ -65,11 +66,22 @@
       margin-bottom: 1em;
     }
 
-    .source {
+    a {
       margin: 0;
       color: #eee;
-      margin-left: 0.125em;
     }  
+
+    header {
+      border-bottom: 1px solid;
+      margin-bottom: 1em;
+    }
+
+    footer {
+      border-top: 1px solid;
+      padding-top: 1em;
+      font-size: 0.75em;
+    }
+
   </style>
   <script src="https://momentjs.com/downloads/moment.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
